--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv-flow": "^4.1.0",
     "mongoose": "^8.2.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.1.1",
     "next-auth": "^4.24.6",
     "react": "^18",
@@ -22,6 +23,8 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
