--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.15",
     "bcryptjs": "^2.4.3",
     "dotenv-flow": "^4.1.0",
     "mongoose": "^8.2.0",
@@ -29,6 +30,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.7.3",
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
     "postcss": "^8",
