--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@phosphor-icons/react": "^2.0.15",
     "bcryptjs": "^2.4.3",
     "dotenv-flow": "^4.1.0",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet-geosearch": "^3.11.1",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.1.1",
@@ -19,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
     "react-paginate": "^8.2.0",
     "xss": "^1.0.15"
   },
@@ -26,6 +30,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/leaflet": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
