see clickup kanban - ref 19 to 21

--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
+    "@react-leaflet/core": "^2.1.0",
+    "@types/leaflet.heat": "^0.2.4",
     "bcryptjs": "^2.4.3",
     "dotenv-flow": "^4.1.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-geosearch": "^3.11.1",
+    "leaflet.heat": "^0.2.0",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.1.1",
