--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "14.1.1",
     "next-auth": "^4.24.6",
+    "opencage-api-client": "^1.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
